// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with showDestroy renders correctly 1`] = `
<ul
  className="MuiGridList-root-1"
  style={
    Object {
      "margin": -2,
    }
  }
>
  <li
    className="MuiGridListTile-root-2"
    style={
      Object {
        "height": 364,
        "padding": 2,
        "width": "50%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-3"
    >
      <div
        to="/undefined"
      >
        Link - 
        <img
          alt={undefined}
          src={undefined}
          style={
            Object {
              "height": 360,
              "objectFit": "cover",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        style={
          Object {
            "background": "rgba(0, 0, 0, 0.6)",
            "bottom": 0,
            "color": "white",
            "height": 90,
            "left": 0,
            "padding": 20,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          style={
            Object {
              "float": "left",
            }
          }
        >
          <div
            style={
              Object {
                "color": "white",
                "display": "block",
                "textDecoration": "none",
              }
            }
            to="/undefined"
          >
            Link - 
            <h3
              className="MuiTypography-root-6 MuiTypography-subheading-13 MuiTypography-colorInherit-25"
            />
          </div>
        </div>
        <div
          style={
            Object {
              "float": "right",
            }
          }
        >
          <div
            destroying={true}
            id={11111}
            parentId={123}
          >
            Destroy - 
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="MuiGridListTile-root-2"
    style={
      Object {
        "height": 364,
        "padding": 2,
        "width": "50%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-3"
    >
      <div
        to="/undefined"
      >
        Link - 
        <img
          alt={undefined}
          src={undefined}
          style={
            Object {
              "height": 360,
              "objectFit": "cover",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        style={
          Object {
            "background": "rgba(0, 0, 0, 0.6)",
            "bottom": 0,
            "color": "white",
            "height": 90,
            "left": 0,
            "padding": 20,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          style={
            Object {
              "float": "left",
            }
          }
        >
          <div
            style={
              Object {
                "color": "white",
                "display": "block",
                "textDecoration": "none",
              }
            }
            to="/undefined"
          >
            Link - 
            <h3
              className="MuiTypography-root-6 MuiTypography-subheading-13 MuiTypography-colorInherit-25"
            />
          </div>
        </div>
        <div
          style={
            Object {
              "float": "right",
            }
          }
        >
          <div
            destroying={false}
            id={22222}
            parentId={123}
          >
            Destroy - 
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`without showDestroy renders correctly 1`] = `
<ul
  className="MuiGridList-root-1"
  style={
    Object {
      "margin": -2,
    }
  }
>
  <li
    className="MuiGridListTile-root-2"
    style={
      Object {
        "height": 364,
        "padding": 2,
        "width": "50%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-3"
    >
      <div
        to="/undefined"
      >
        Link - 
        <img
          alt={undefined}
          src={undefined}
          style={
            Object {
              "height": 360,
              "objectFit": "cover",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        style={
          Object {
            "background": "rgba(0, 0, 0, 0.6)",
            "bottom": 0,
            "color": "white",
            "height": 90,
            "left": 0,
            "padding": 20,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          style={
            Object {
              "float": "left",
            }
          }
        >
          <div
            style={
              Object {
                "color": "white",
                "display": "block",
                "textDecoration": "none",
              }
            }
            to="/undefined"
          >
            Link - 
            <h3
              className="MuiTypography-root-6 MuiTypography-subheading-13 MuiTypography-colorInherit-25"
            />
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="MuiGridListTile-root-2"
    style={
      Object {
        "height": 364,
        "padding": 2,
        "width": "50%",
      }
    }
  >
    <div
      className="MuiGridListTile-tile-3"
    >
      <div
        to="/undefined"
      >
        Link - 
        <img
          alt={undefined}
          src={undefined}
          style={
            Object {
              "height": 360,
              "objectFit": "cover",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        style={
          Object {
            "background": "rgba(0, 0, 0, 0.6)",
            "bottom": 0,
            "color": "white",
            "height": 90,
            "left": 0,
            "padding": 20,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          style={
            Object {
              "float": "left",
            }
          }
        >
          <div
            style={
              Object {
                "color": "white",
                "display": "block",
                "textDecoration": "none",
              }
            }
            to="/undefined"
          >
            Link - 
            <h3
              className="MuiTypography-root-6 MuiTypography-subheading-13 MuiTypography-colorInherit-25"
            />
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
